--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Alternative-transformation-methods.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Alternative-transformation-methods.adoc
@@ -13,40 +13,37 @@ We provide multiple implementations for the <<CPS-to-Deployment-Transformation#,
 
 The detailed description of each variant can be found on their corresponding wiki page.
 
-### Variants
+## Variants
 
 These implementations will be created under the link:https://git.eclipse.org/c/viatra/org.eclipse.viatra.examples.git/tree/cps/transformations[transformations] folder in the repository and under the `org.eclipse.viatra.query.examples.cps.xfrom.m2m.<id>` namespace.
 
-#### Batch 
+### Batch 
 
-1. Xtend (`id = batch.simple`)
-  * Details <<Simple-and-optimized-Xtend-batch-M2M-transformation#,here>>
-1. Xtend + VIATRA Query (`id = batch.eiq`)
-  * Details <<Simple-Xtend-and-Query-M2M-transformation#,here>>
-1. VIATRA Batch API (`id = batch.viatra`)
-  * Details <<VIATRA-transformation-API-based-batch-M2M-transformation#,here>>
+. Xtend (`id = batch.simple`, <<Simple-and-optimized-Xtend-batch-M2M-transformation#,details>>)
+. Xtend + VIATRA Query (`id = batch.eiq`, <<Simple-Xtend-and-Query-M2M-transformation#,details>>)
+. VIATRA Batch API (`id = batch.viatra`, <<VIATRA-transformation-API-based-batch-M2M-transformation#,details>>)
 
-#### Incremental
+### Incremental
 
 For the incremental alternatives, a differentiating factor is the method to identify changes in the source model which must be synchronized to the target ("dirty flag")
 
-1. Direct notification (`id = incr.direct`)
- * dirty: EMF adapter/IQBase
-1. Explicit traceability (`id = incr.expl`)
- * dirty: traceability model state
- * Details <<Explicit-traceability-M2M-transformation#,here>>
-1. Query result traceability (`id = incr.qrt`)
- * dirty: query result bookmarking, traceability saved in deltamonitor
- * Details <<Query-result-traceability-M2M-transformation#,here>>
-1. Partial batch transformation (`id = incr.aggr`)
- * dirty: consider query results as notifications/events, low level change aggregation (transform bigger parts)
- * advanced: notifications independent of source model, transformation may run in background
- * Details <<Partial-batch-M2M-transformation#,here>
-1. Change-driven transformations  (`id = incr.cdt`)
- * dirty: EVM activation life-cycle
-1. VIATRA EMF-based link:http://wiki.eclipse.org/VIATRA/Transformation_API[transformation API]  (`id = incr.viatra`)
- * Details <<VIATRA-transformation-API-based-QRT-MTM-transformation#,here>>
+. Direct notification (`id = incr.direct`)
+  * dirty: EMF adapter/IQBase
+. Explicit traceability (`id = incr.expl`)
+  * dirty: traceability model state
+  * Details <<Explicit-traceability-M2M-transformation#,here>>
+. Query result traceability (`id = incr.qrt`)
+  * dirty: query result bookmarking, traceability saved in deltamonitor
+  * Details <<Query-result-traceability-M2M-transformation#,here>>
+. Partial batch transformation (`id = incr.aggr`)
+  * dirty: consider query results as notifications/events, low level change aggregation (transform bigger parts)
+  * advanced: notifications independent of source model, transformation may run in background
+  * Details <<Partial-batch-M2M-transformation#,here>
+. Change-driven transformations  (`id = incr.cdt`)
+  * dirty: EVM activation life-cycle
+. VIATRA EMF-based link:http://wiki.eclipse.org/VIATRA/Transformation_API[transformation API]  (`id = incr.viatra`)
+  * Details <<VIATRA-transformation-API-based-QRT-MTM-transformation#,here>>
 
-### Summary
+## Summary
 
 We currently implemented the above mentioned different variants (if you know VIATRA Query well you may argue that the LS based should be considered as a separate one :-) ) for this transformation and in the future might add some additional ones built on our technology stack. However, we would like to invite variants using other transformation tools. Since the demonstrator is open source, this may involve users of other tools or even submitted as a case to the link:http://www.transformation-tool-contest.eu/[Transformation Tool Contest].
