--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/VIATRA-transformation-API-based-batch-M2M-transformation.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/VIATRA-transformation-API-based-batch-M2M-transformation.adoc
@@ -11,29 +11,29 @@ The idea behind this transformation variant is similar in concept to the <<Simpl
 
 In this variant the transformation steps are executed in the following order:
 
-1. Transformation of the host instances
+. Transformation of the host instances
     * Create a new DeploymentHost in the deployment model representing the matched HostInstance. Add trace to traceability.
     * Related patterns:
     ** _hostInstance_
-1. Transformation of the application instances
+. Transformation of the application instances
     * Create a new DeploymentApplication in the deployment model representing the matched ApplicationInstance. Add trace to traceability.
     * Related patterns:
     ** _applicationInstance_
     ** _cps2depTrace_
-1. Transformation of the state machines
+. Transformation of the state machines
     * Create a new DeploymentBehavior in the deployment model representing the matched StateMachine for the ApplicationInstance specified by the pattern. This happens for every ApplicationInstance with a type that defines the StateMachine. Add DeploymentBehavior to proper trace in traceability. If it does not exist, create it.
     * Related patterns:
     ** _appInstanceWithStateMachine_
     ** _applicationInstance_
     ** _cps2depTrace_
-1. Transformation of the states of the state machines
+. Transformation of the states of the state machines
     * Create a new BehaviorState in the deployment model representing the matched State for the ApplicationInstance specified by the pattern. This happens for every ApplicationInstance with a type that defines the StateMachine containing the State. Set the DeploymentBehavior's current state to the created BehaviorState if the original State was an initial state of it's state machine. Add BehaviorState to proper trace in traceability. If it does not exist, create it.
     * Related patterns:
     ** _state_
     ** _appInstanceWithStateMachine_
     ** _applicationInstance_
     ** _cps2depTrace_
-1. Transformation of the transitions of the state machines
+. Transformation of the transitions of the state machines
     * Create a new BehaviorTransition in the deployment model representing the matched State for the ApplicationInstance specified by the pattern. This happens for every ApplicationInstance with a type that defines the StateMachine containing the State containing the Transition. Add BehaviorTransition to proper trace in traceability. If it does not exist, create it.
     * Related patterns:
     ** _transition_
@@ -41,7 +41,7 @@ In this variant the transformation steps are executed in the following order:
     ** _appInstanceWithStateMachine_
     ** _applicationInstance_
     ** _cps2depTrace_
-1. Transformation of actions of the transitions
+. Transformation of actions of the transitions
     * Set the trigger between the BehaviorTransitions representing the matched Transitions.
     * Related patterns:
     ** _action_
