--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/extra/VIATRA-EVM-barebone.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/extra/VIATRA-EVM-barebone.adoc
@@ -32,7 +32,7 @@ This is the simple way of the execution. For this you need to set the *`simple` 
 A scheduler factory is created for the ViatraQueryEngine and an execution schema is created based on this factory and the ViatraQueryEngine. After these steps the conflict resolver is set and rules are added to the schema. The execution is triggered by the `startUnscheduledExecution` method.
 
 Code:
-[[app-listing]]
+[[evm-initialize]]
 [source,java]
 ----
 // Create schema
@@ -54,7 +54,7 @@ Here are the versions of manual executions of activations. For these the value o
 For all advanced version of execution need a rule engine (based on the ViatraQueryEngine), a context, and the setup of these elements (conflict resolver and addition of rules for the rule engine).
 
 Code:
-[[app-listing]]
+[[evm-common]]
 [source,java]
 ----
 // Create rule engine over ViatraQueryEngine
@@ -72,7 +72,7 @@ ruleEngine.addRule(appMapping)
 Activations of a rule can be queried from the rule engine. This is a set which can be iterated and the activation can be fired (with the context) so we can *fire the first one*.
 
 Code:
-[[app-listing]]
+[[evm-createrule]]
 [source,java]
 ----
 // Check rule applicability
@@ -87,7 +87,7 @@ if (!createClassesActivations.empty) {
 Next activation from the rule engine is fired while the set of conflicting activations is not empty so we can *fire all activations*. After firing all activations *rules are removed* from the rule engine.
 
 Code:
-[[app-listing]]
+[[evm-firing]]
 [source,java]
 ----
 // Check for any applicable rules
@@ -104,7 +104,7 @@ ruleEngine.removeRule(hostMapping)
 First of all a *custom event filter* is created. This filter works over `HostInctanceMatch` objects and filter out match which contains host instance with the specified nodeIp. The rule should be added to the rule engine with the filter (if we want that the unfiltered rule does not cause a problem it should be removed) and after this we can iterate over the activations just like in the previous version (but only one deployment host will be created if the original rule has been removed).
 
 Code:
-[[app-listing]]
+[[evm-filter]]
 [source,java]
 ----
 // Create custom filter for IP
@@ -128,7 +128,7 @@ while (!ruleEngine.conflictingActivations.empty) {
 At this version a different filter is created: a `ViatraQueryMatchEventFilter` which works with a specific match. This match is created for a host instance. We need to add the hostMapping-filter pair to the rule engine. The removal of the original rule is not necessary.
 
 Code for filter:
-[[app-listing]]
+[[evm-filter2]]
 [source,java]
 ----
 // Create query match filter with a partial match object
@@ -144,7 +144,7 @@ ruleEngine.addRule(hostMapping, matchFilter)
 The main part of this section is the next: a *scoped conflict set is created* from the rule engine. It expects a resolver and a multi map of rules and filters. Because of this last point the original rule does not need to be removed from the rule engine. *Important* that the simple rule addition uses *empty filter* (and not a null value) when registers the rule so at the map empty filter should be used for these rules. The `nextActivation` method of this conflict set gives the next activation which can be fired (if no activation can be fired the return value will be `null` so a null check is necessary before the fire).
 
 Code for conflict set:
-[[app-listing]]
+[[evm-conflictset]]
 [source,java]
 ----
 // Check that there is any conflicting activation
