--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-1.6.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-1.6.adoc
@@ -1,15 +1,17 @@
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
 :imagesdir: {rootdir}/images
-= VIATRA 1.6 - New and Noteworthy
+= VIATRA 1.6
 
-== Model Query Evaluation
+== New and Noteworthy
+
+=== Model Query Evaluation
 
 VIATRA 1.6 provides a few new features that aim for better compatibility in a wider range of use cases. In general, VIATRA should work out of the box the same way it worked before, but there are some settings that allow a more finely tuned behaviour for certain situations.
 
 Custom implementations of the EMF API (e.g. when generated code is manually modified) may violate EMF API contracts, and send *incorrect notifications* (e.g. duplicate model deletion events); similar situations can arise e.g. if there are custom EMF adapters that throw exceptions. In previous versions of VIATRA, this resulted in strange exceptions being thrown from the query backend. In version 1.6, the model indexer identifies most of these cases and provides a more precise error message describing what happens. It is also possible to tell the indexer to ignore (more specifically, log only) these incorrect notifications by turning the *strict notification mode* off, as shown below.
 
-[[app-listing]]
+[[v16-strictnotifications]]
 [source,java]
 ----
 BaseIndexOptions options = new BaseIndexOptions().withStrictNotificationMode(false); 
@@ -21,7 +23,7 @@ ViatraQueryEngine engine = ViatraQueryEngine.on(scope);
 
 In case of the query scope is set to a subset of the entire model (e.g only one EMF resource within the resource set), model elements within the scope of the engine may have references pointing to elements outside the scope; these are called *dangling edges*. Previous versions of VIATRA made the assumption that the model is self-contained and free of dangling edges; the behavior of the query engine was unspecified (potentially incorrect match sets) if the model did not have this property. In VIATRA 1.6, this behavior was cleaned up by adding a new indexer mode that drops this assumption, and (with a minor cost to performance) always checks both ends of all indexed edges to be in-scope. For backward compatibility, the old behavior is used by default, but you can manually change this using the corresponding base index option as below. For new code we suggest to use the option to drop the dangling-free assumption, as it provides more consistent and intuitive results in a lot of cases; in a future VIATRA release this will be the new default.
 
-[[app-listing]]
+[[v16-danglingfree]]
 [source,java]
 ----
 BaseIndexOptions options = new BaseIndexOptions().withDanglingFreeAssumption(false); 
@@ -32,7 +34,7 @@ ViatraQueryEngine engine = ViatraQueryEngine.on(scope);
 
 
 The advanced query API now includes a feature that lets users temporarily "turn off" query result maintenance in the incremental query backend. During such a code block, only the base model indexer is updated, query results remain stale until the end of the block. The advantage is that it is possible to save significant execution time when changing the model in a way that partially undoes itself, e.g. a large part of the model is removed and then re-added. 
-[[app-listing]]
+[[v16-delay]]
 [source,java]
 ----
 AdvancedViatraQueryEngine engine = ...
@@ -48,7 +50,7 @@ engine.delayUpdatePropagation(new Callable<Void>() {
 
 Finally, VIATRA 1.6 includes the http://dl.acm.org/citation.cfm?id=170066[Delete and REDerive (DRed)] algorithm as an experimental opt-in choice for evaluating recursive queries. Formerly, recursive queries were only fully supported under the condition that there can be circular dependencies between VQL patterns (or a pattern and itself), but not between individual matches of these patterns. Such circularity could lead to incorrect result maintenance after changes, even if all involved pattern calls are positive (simple `find` constraints). This restriction can now be relaxed by enabling DRed. With a small penalty in execution time, DRed guarantees correct result maintenance for arbitrary recursive pattern structures as long as all recursive calls are positive (i.e. no negation or aggregation along cycles of recursion). Note that for the very common special case of transitive closures, the dedicated language element (transitive pattern call) is still likely to be more efficient. DRed is still in an experimental phase, and is turned off by default; it can be manually enabled using the query evaluation hint `ReteHintOptions.deleteRederiveEvaluation`.
 
-== Code generator updates
+=== Code generator updates
 
 image:16_query_codegen_options.png[]
 
@@ -60,7 +62,7 @@ The other major change relates to *the handling of private patterns*. Given priv
 
 In complex metamodels described in Ecore and genmodel files there are often *cross-references between files* with absolute or workspace-relative urls. When compiling VIATRA queries using the maven compiler, these urls cannot be resolved automatically. EMF uses URI converters to define a mapping between such source and target model elements. Starting with VIATRA 1.6, you can now specify the location of metamodels referred to via `platform:/resource` URIs with the `uriMappings` configuration element. See http://wiki.eclipse.org/VIATRA/UserDocumentation/Build#viatra-maven-plugin[this wiki page] for more details.
 
-== Query Test Framework updates
+=== Query Test Framework updates
 
 image:16_query_coverage_report.png[]
 
@@ -68,7 +70,7 @@ The query testing capabilities of VIATRA were extended to support a wider range 
 
 When testing your patterns, you can measure their *test coverage* (similar to what EclEmma does to Java code). This means you can see which constraints described in the patterns were used during the evaluation of the queries. The coverage can be reported as an HTML file which immediately shows which patterns need more testing. See http://wiki.eclipse.org/VIATRA/Query/UserDocumentation/QueryTestFramework#Coverage_analysis_and_reporting[the feature's documentation] for details.
 
-== Documentation updates
+=== Documentation updates
 
 image:16_query_explain_message.png[]
 
@@ -76,7 +78,7 @@ To make it easier to get started with VIATRA, a http://www.eclipse.org/viatra/do
 
 A few *error messages* in the query editor related to enumerable and non-enumerable references had been reported to hard to understand. In this version the error messages have been updated, and a quick fix was also added that updates a detailed explanation for the message. In future versions we plan to extend this support to make other error messages more understandable.
 
-== GEF5-based visualization
+=== GEF5-based visualization
 
 image:16_rete_visualizer.png[]
 
@@ -84,12 +86,12 @@ The graph-based components, specifically the http://wiki.eclipse.org/VIATRA/Quer
 
 Following the dependencies of GEF5 to use these features in the future, JavaFX (available from Java 8) and e(fx)clipse is required to be installed.
 
-== Complex Event Processing
+=== Complex Event Processing
 
 VIATRA CEP has previously supported *event parameters* for atomic events only. From now on, complex events can also be parameterized, with full support for event composition. Furthermore, query events are parameterized as well, the parameters being directly derived from the parameters of the referenced query.
 
 For example, see these sample events https://github.com/viatra/viatra-cep-examples/tree/master/minimal-samples/QueryEvent[from here]. Given the following query:
-[[app-listing]]
+[[v16-cep-parameters]]
 [source,vql]
 ----
 pattern hasContainer(contained: EClass, container: EClass) = {
@@ -100,7 +102,7 @@ pattern hasContainer(contained: EClass, container: EClass) = {
 ----
 
 We can define a parameterized query event and compose it into a parameterized complex event:
-[[app-listing]]
+[[v16-parameterizedevent]]
 [source,vql]
 ----
 queryEvent addContainer(contained:EObject, container:EObject) 
@@ -111,7 +113,7 @@ complexEvent addContainer2(cned:EObject, container1:EObject, container2:EObject)
 }
 ----
 
-== Design Space Exploration
+=== Design Space Exploration
 
 VIATRA-DSE got a few incremental updates and bug fixes.
 
@@ -123,17 +125,17 @@ The utility function `DesignSpaceExplorer.saveModels()` will save all solutions 
 
 Performance has been improved by a better backtracking mechanism: when an exploration strategy resets to an other trajectory for exploring other areas of the design space and if the new and the old trajectory start with the same rule applications, then it will only backtrack to their last common state.
 
-== Additional issues
+=== Additional issues
 For a complete list of fixed issues for VIATRA 1.6 consult https://projects.eclipse.org/projects/modeling.viatra/releases/1.6.0/bugs
 
-= Migrating to VIATRA 1.6
+== Migrating to VIATRA 1.6
 
-== Recommended new indexing option for handling dangling edges
+=== Recommended new indexing option for handling dangling edges
 A a new filter option was introduced in this release regarding dangling edges (i.e. references pointing to objects outside the scope of the query engine). The old version made the assumptions that there are no such dangling edges whatsoever, and thus did not apply a filter to reject query matches that would involve such a dangling edge. This led to surprising results in some cases. For more predictable results and more straightforward semantics, we now allow the user to turn off this assumption, so that the appropriate checks will be performed (at a slight cost in performance).
 
 For new code, and for any existing users that experienced problems with the unpredictability of dangling edges, we suggest to use the newly introduced option to drop the dangling-free assumption. In a future VIATRA release this will be the new default. 
 
-[[app-listing]]
+[[v16-dangling-migration]]
 [source,vql]
 ----
 BaseIndexOptions options = new BaseIndexOptions().withDanglingFreeAssumption(false); 
@@ -142,7 +144,7 @@ EMFScope scope = new EMFScope(rSet, options);
 ViatraQueryEngine engine = ViatraQueryEngine.on(scope);
 ----
 
-== API break in Transitive Closure Library
+=== API break in Transitive Closure Library
 This API breaking change affects users of the org.eclipse.viatra.query.runtime.base.itc Java library for incremental transitive closure computation over custom graph data sources. 
 
 *Not affected*: 
@@ -154,7 +156,7 @@ This API breaking change affects users of the org.eclipse.viatra.query.runtime.b
 *Details*: 
 We have changed the way how the multiset of incoming/outgoing graph edges is represented in interfaces `IGraphDataSource` and `IBiDirectionalGraphDataSource`. The old interface used a `java.util.List` of vertices (parallel edges represented as multiple entries in the list), while the new interface uses `java.util.Map` with vertices as keys, and positive integers representing the count of parallel edges as values. The graph observer interface is unchanged.
 
-== Dependency changes related to Guava
+=== Dependency changes related to Guava
 
 In the Oxygen release train, multiple versions of Guava are available. In order to ensure VIATRA uses a single Guava version, all framework projects now import Guava with package imports, and set the corresponding ''uses'' constraints for all packages where Guava packages are exported.
 
