--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Code-Generator-Distributed-realization-Xtend-templates.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Code-Generator-Distributed-realization-Xtend-templates.adoc
@@ -1,34 +1,37 @@
-# Code Generator (Distributed realization, Xtend templates)
+= Code Generator (Distributed realization, Xtend templates)
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
 :imagesdir: {rootdir}/images
 
 The `org.eclipse.viatra.query.examples.cps.m2t.distributed.generator` project implements a basic model-to-text transformation. It is a basic template based generator written in _Xtend_ .
 
-## Deployment realization
+== Deployment realization
 The generated Java code realizes a "_distributed_" `Deployment` model where `Hosts` are the base elements of the distribution. Each host is a separated entity which can be run on `HostRunner` (threads). Hosts can communicate with each other via the `CommunicationNetwork` shared object.
 
 image::codegenerator.png[Code Generator]
 
 `Hosts` and `Applications` are data objects with states. `HostRunner` is a simple engine which triggers its hosts to fire available transitions on every applications. The communication is asynchronous and realized with queues.
 
-## Code Generator
+== Code Generator
 The public API of the transformation contains four methods.
-```xtend
+[source,xtend]
+----
 interface ICPSGenerator {
     def CharSequence generateHostCode(DeploymentHost host) throws CPSGeneratorException
     def CharSequence generateApplicationCode(DeploymentApplication application) throws CPSGeneratorException
     def CharSequence generateBehaviorCode(DeploymentBehavior behavior) throws CPSGeneratorException
     def CharSequence generateDeploymentCode(Deployment deployment) throws CPSGeneratorException
 }
-```
+----
+
 This implementation of the code generator is stateless. Each separate model element is generated individually.
 
 
-### Host
+=== Host
 The host objects keep references to their own applications.
-#### Generated Code
-```java
+==== Generated Code
+[source,java]
+----
 public class Host152661025 extends BaseHost {
     
     public Host152661025(CommunicationNetwork network) {
@@ -41,12 +44,13 @@ public class Host152661025 extends BaseHost {
     }
 
 } 
-```
+----
 
-### Application
+==== Application
 Applications store their `ApplicationID` and their current state of the behavior (State machine).
-#### Generated Code
-```java 
+==== Generated Code
+[source,java]
+----
 public class AlarmApplication extends BaseApplication<BehaviorAlarmB> {
 
     protected static final String APP_ID = "Alarm";
@@ -64,12 +68,13 @@ public class AlarmApplication extends BaseApplication<BehaviorAlarmB> {
     }
     
 }
-```
+----
 
-### Behavior
+=== Behavior
 Behavior represents a statemachine of the application. It stores and manages the possible state transitions. 
-#### Generated Code
-```java
+==== Generated Code
+[source,java]
+----
 public enum BehaviorAlarmB implements State<BehaviorAlarmB> {
      ///////////
     // States
@@ -139,6 +144,6 @@ public enum BehaviorAlarmB implements State<BehaviorAlarmB> {
     }
 
 }
-```
+----
 
 In addition to the generated code `org.eclipse.viatra.query.examples.cps.m2t.proto.distributed` project contains the shared part of the working code (_general_ package). Implementation of the CommunicationNetwork, the HostRunner, the BaseApplication, the BaseHost, State and the interfaces are placed there.
